fixed white space took out 320 media query adding padding-top

--- a/src/components/commonComps/styles/FirstSection.css
+++ b/src/components/commonComps/styles/FirstSection.css
@@ -1,7 +1,6 @@
 
 .firstSection {
     position: relative;
-    margin-top: -12.5vh;
 
 }
 .firstSectionWrapper {
