--- a/src/styles/FrontPage/wrapper.css
+++ b/src/styles/FrontPage/wrapper.css
@@ -9,11 +9,7 @@
 
 }
 
-@media only screen and (min-width: 320px) and (max-width: 410px) {
-    .wrapper {
-        padding-top: 15vh;
-    }
-}
+
 
 @media only screen and (min-width: 968px) {
     .wrapper {
